--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   db:
     image: postgres:12.2-alpine
-    container_name: "comments-database"
+    container_name: "template-database"
     ports:
       - "5432:5432"
     environment:
@@ -17,7 +17,7 @@ services:
   
   api:
     build: .
-    container_name: "comments-rest-api"
+    container_name: "template api"
     environment:
       DB_USERNAME: "postgres"
       DB_PASSWORD: "postgres"
@@ -39,3 +39,5 @@ volumes:
 networks:
   fullstack:
     driver: bridge
+
+    
